<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inicio_propietario_camion"
    android:background="@mipmap/fondo_propietario_camion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioPropietarioCamion">

    <TextView
        android:id="@+id/textView_MIPC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/menu_propietario_de_camion"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_MIPC"
        android:layout_width="233dp"
        android:layout_height="216dp"
        android:layout_marginTop="32dp"
        android:src="@mipmap/propietario"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/textView_MIPC"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/textView_MIPC"
        app:layout_constraintTop_toBottomOf="@id/textView_MIPC" />

    <Button
        android:id="@+id/button_MIPC_VerSolicitudes"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:text="@string/ver_solicitudes"
        app:layout_constraintEnd_toEndOf="@+id/imageView_MIPC"
        app:layout_constraintStart_toStartOf="@+id/imageView_MIPC"
        app:layout_constraintTop_toBottomOf="@+id/imageView_MIPC" />

    <Button
        android:id="@+id/button_MIPC_MisSolicitudes"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/mis_solicitudes"
        app:layout_constraintEnd_toEndOf="@+id/button_MIPC_VerSolicitudes"
        app:layout_constraintStart_toStartOf="@+id/button_MIPC_VerSolicitudes"
        app:layout_constraintTop_toBottomOf="@+id/button_MIPC_VerSolicitudes" />

    <Button
        android:id="@+id/button_MIPC_MisCamiones"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/mis_camiones"
        app:layout_constraintEnd_toEndOf="@+id/button_MIPC_MisSolicitudes"
        app:layout_constraintStart_toStartOf="@+id/button_MIPC_MisSolicitudes"
        app:layout_constraintTop_toBottomOf="@+id/button_MIPC_MisSolicitudes" />

    <Button
        android:id="@+id/button_MIPC_Opciones"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/opciones"
        app:layout_constraintEnd_toEndOf="@+id/button_MIPC_MisCamiones"
        app:layout_constraintStart_toStartOf="@+id/button_MIPC_MisCamiones"
        app:layout_constraintTop_toBottomOf="@+id/button_MIPC_MisCamiones" />

    <Button
        android:id="@+id/button_MIPC_Salir"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/salir"
        app:layout_constraintEnd_toEndOf="@+id/button_MIPC_Opciones"
        app:layout_constraintStart_toStartOf="@+id/button_MIPC_Opciones"
        app:layout_constraintTop_toBottomOf="@+id/button_MIPC_Opciones" />

    <TextView
        android:id="@+id/textView_MIPC_SesionActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Sesion Actual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>